--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -4,3 +4,6 @@ MACOSX_DEPLOYMENT_TARGET:   # [osx and x86_64]
 blas_impl:
   - mkl        # [linux or win]
   - accelerate # [osx]
+
+cuda_compiler_version: # [linux and x86_64]
+  - 11.8               # [linux and x86_64]
