--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -6,4 +6,7 @@ blas_impl:
   - accelerate # [osx]
 
 cuda_compiler_version: # [linux and x86_64]
-  - 11.8               # [linux and x86_64]
+  - 12.3               # [linux and x86_64]
+
+cuda_compiler:         # [linux and x86_64]
+  - nvcc               # [linux and x86_64]
