--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -9,4 +9,4 @@ cuda_compiler_version: # [linux and x86_64]
   - 12.3               # [linux and x86_64]
 
 cuda_compiler:         # [linux and x86_64]
-  - nvcc               # [linux and x86_64]
+  - cuda-nvcc          # [linux and x86_64]
