--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -10,3 +10,6 @@ cuda_compiler_version: # [linux and x86_64]
 
 cuda_compiler:         # [linux and x86_64]
   - cuda-nvcc          # [linux and x86_64]
+
+cpu_variant:
+  - main_channel_default
