--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -5,11 +5,11 @@ blas_impl:
   - mkl        # [linux or win]
   - accelerate # [osx]
 
-cuda_compiler_version: # [linux and x86_64]
-  - 12.3               # [linux and x86_64]
+# cuda_compiler_version: # [linux and x86_64]
+#   - 12.3               # [linux and x86_64]
 
-cuda_compiler:         # [linux and x86_64]
-  - cuda-nvcc          # [linux and x86_64]
+# cuda_compiler:         # [linux and x86_64]
+#   - cuda-nvcc          # [linux and x86_64]
 
 cpu_variant:
   - main_channel_default
