--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,6 +1,12 @@
 MACOSX_DEPLOYMENT_TARGET:   # [osx and x86_64]
 - '11.0'                    # [osx and x86_64]
 
+# To provide "restrict", otherwise compilation errors
+c_compiler:
+  - vs2019                     # [win]
+cxx_compiler:
+  - vs2019                     # [win]
+
 blas_impl:
   - mkl                        # [(x86 or x86_64) and not osx]
   - openblas                   # [not win and not osx]
