--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,7 +8,8 @@ package:
 source:
   url: https://github.com/ggerganov/llama.cpp/archive/b{{ version.split(".")[-1] }}.tar.gz
   sha256: 163255cb77599be6f97c487bcdce79912c7509a9c522ad4ab5b23cc4104d0bb4
-  patches:                        # [blas_impl == "mkl"]
+  patches:                        # [linux or (unix and blas_impl == "mkl")]
+    - test_exe_threads.patch      # [linux]
     - mkl.patch                   # [blas_impl == "mkl"]
 
 build:
@@ -30,8 +31,9 @@ requirements:
     - cmake
     - ninja-base
     - pkgconfig
-    - patch     # [unix and blas_impl == "mkl"]
+    - patch     # [linux or (unix and blas_impl == "mkl")]
     - m2-patch  # [win and blas_impl == "mkl"]
+    - pthread-stubs 0.3                                   # [linux]
   host:
     - cudatoolkit      {{ cuda_compiler_version }}        # [gpu_variant == "cuda-11"]
     - cuda-version     {{ cuda_compiler_version }}        # [(gpu_variant == "cuda-11") or (gpu_variant == "cuda-12")]
@@ -40,7 +42,6 @@ requirements:
 
     - openblas-devel {{ openblas }}                       # [blas_impl == "openblas"]
     - mkl-devel {{ mkl }}                                 # [blas_impl == "mkl"]
-    - pthread-stubs 0.3                                   # [linux]
   run:
     - {{ pin_compatible('cudatoolkit', max_pin='x.x') }}  # [gpu_variant == "cuda-11"]
     - {{ pin_compatible('cuda-version', max_pin='x.x') }} # [(gpu_variant == "cuda-11") or (gpu_variant == "cuda-12")]
