--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -17,7 +17,7 @@ blas_impl:
   - accelerate                 # [osx]
 
 gpu_variant:
-  - none                       # [not win]
+  - none
   - metal                      # [osx and arm64]
   - cuda-11                    # [linux and x86_64]
   - cuda-12                    # [win or (linux and x86_64)]
