--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,6 +17,7 @@ source:
 build:
   # skip_gpu is set through abs.yaml for use in prefect only
   skip: true # [skip_gpu and ((gpu_variant == "cuda-11") or (gpu_variant == "cuda-12"))]
+  skip: true # [s390x]
   # Use a build number difference to ensure that the GPU
   # variant is slightly preferred by conda's solver, so that it's preferentially
   # installed where the platform supports it.
@@ -38,8 +39,8 @@ requirements:
     - cmake
     - ninja-base
     - pkgconfig
-    - patch     # [unix or (blas_impl == "mkl")]
-    - m2-patch  # [win and (blas_impl == "mkl")]
+    - patch     # [unix]
+    - m2-patch  # [win]
   host:
     - cudatoolkit      {{ cuda_compiler_version }}        # [gpu_variant == "cuda-11"]
     - cuda-version     {{ cuda_compiler_version }}        # [(gpu_variant == "cuda-11") or (gpu_variant == "cuda-12")]
