Revert "comment out final channel for now"
This reverts commit 7a21680a33aa4f3c5a6c761f8e83d6d4210e3b98.

--- a/abs.yaml
+++ b/abs.yaml
@@ -5,6 +5,6 @@ build_parameters:
   - "--error-overlinking"
   - "--variants \"{skip_gpu: True}\""
 
-# # destination upon merge
-# upload_channels:
-#   ai-staging
+# destination upon merge
+upload_channels:
+  ai-staging
