--- a/abs.yaml
+++ b/abs.yaml
@@ -3,7 +3,7 @@ build_parameters:
   - "--suppress-variables"
   - "--skip-existing"
   - "--error-overlinking"
-  - "--variants \"{skip_gpu: True}\""
+  - "--variants \"{skip_cuda_prefect: True}\""
 
 # destination upon merge
 upload_channels:
