--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -28,12 +28,20 @@ gpu_variant:
 MACOSX_SDK_VERSION:          # [(osx and arm64)]
   - 11.1                     # [(osx and arm64)]
   - 12.3                     # [(osx and arm64)]
+macos_min_version:           # [(osx and arm64)]
+  - 11.1                     # [(osx and arm64)]
+  - 12.3                     # [(osx and arm64)]
+MACOSX_DEPLOYMENT_TARGET:    # [(osx and arm64)]
+  - 11.1                     # [(osx and arm64)]
+  - 12.3                     # [(osx and arm64)]
 CONDA_BUILD_SYSROOT:         # [(osx and arm64)]
   - /Library/Developer/CommandLineTools/SDKs/MacOSX11.1.sdk  # [(osx and arm64)]
   - /Library/Developer/CommandLineTools/SDKs/MacOSX12.3.sdk  # [(osx and arm64)]
 zip_keys:                    # [(osx and arm64)]
   - gpu_variant              # [(osx and arm64)]
   - MACOSX_SDK_VERSION       # [(osx and arm64)]
+  - macos_min_version        # [(osx and arm64)]
+  - MACOSX_DEPLOYMENT_TARGET # [(osx and arm64)]
   - CONDA_BUILD_SYSROOT      # [(osx and arm64)]
 
 # the below for cuda-12 only
