--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -22,8 +22,15 @@ gpu_variant:
   - cuda-11                    # [linux and x86_64]
   - cuda-12                    # [win or (linux and x86_64)]
 
-# the below for cuda-12 only
 cuda_compiler_version:         # [win or (linux and x86_64)]
+  - none                       # [win or (linux and x86_64)]
+  - 11.8                       # [(linux and x86_64)]
   - 12.3                       # [win or (linux and x86_64)]
+
 cuda_compiler:                 # [win or (linux and x86_64)]
-  - cuda-nvcc                  # [win or (linux and x86_64)]
+- cuda-nvcc                    # [win or (linux and x86_64)]
+
+zip_keys:                      # [win or (linux and x86_64)]
+  -                            # [win or (linux and x86_64)]
+    - gpu_variant              # [win or (linux and x86_64)]
+    - cuda_compiler_version    # [win or (linux and x86_64)]
