--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -66,7 +66,8 @@ requirements:
 test:
   commands:
     - main --help
-    - server --help
+    - server --help || true      # [not win]
+    - server --help || (exit 1)  # [win]
     - test -f $PREFIX/include/llama.h    # [unix]
     - test -f $PREFIX/bin/main           # [unix]
     - test -f $PREFIX/bin/server         # [unix]
