--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "llama.cpp" %}
-{% set version = "0.0.3131" %}
+{% set version = "0.0.3184" %}
 {% set build_number = 0 %}
 
 package:
@@ -8,7 +8,7 @@ package:
 
 source:
   url: https://github.com/ggerganov/llama.cpp/archive/b{{ version.split(".")[-1] }}.tar.gz
-  sha256: 7efc9f88853aa791dbfcc832d207c270ff209009e03a151571f7709a8052035c
+  sha256: fae8f4db68602a07203443a06395dc81138a356db1c75c597419b616e542639a
   patches:
     - patches/test_exe_threads.patch      # [linux]
     - patches/mkl.patch                   # [blas_impl == "mkl"]
@@ -50,7 +50,7 @@ requirements:
     - cuda-version     {{ cuda_compiler_version }}        # [(gpu_variant or "").startswith('cuda')]
     - cuda-cudart-dev  {{ cuda_compiler_version }}        # [(gpu_variant or "").startswith('cuda') and (gpu_variant != "cuda-11")]
     - libcublas-dev    {{ cuda_compiler_version }}        # [(gpu_variant or "").startswith('cuda') and (gpu_variant != "cuda-11")]
-    - cuda-compat      {{ cuda_compiler_version }}        # [(gpu_variant or "").startswith('cuda') and (gpu_variant != "cuda-11") and linux]
+    - cuda-driver-dev      {{ cuda_compiler_version }}    # [(gpu_variant or "").startswith('cuda') and (gpu_variant != "cuda-11") and linux]
     - openblas-devel {{ openblas }}                       # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "openblas"]
     - mkl-devel {{ mkl }}                                 # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
     - intel-openmp {{ mkl }}                              # [(not (gpu_variant or "").startswith('cuda')) and blas_impl == "mkl"]
@@ -68,20 +68,20 @@ test:
     # clients now return 1 for after printing help...
     # see https://github.com/ggerganov/llama.cpp/pull/7675
     # see https://github.com/ggerganov/llama.cpp/blob/b3131/examples/main/main.cpp#L120-L127
-    - main --help   || true               # [not win]
-    - main --help   || cmd /c "exit /B 0" # [win]
-    - server --help || true               # [not win]
-    - server --help || cmd /c "exit /B 0" # [win]
+    - llama-cli --help   || true               # [not win]
+    - llama-cli --help   || cmd /c "exit /B 0" # [win]
+    - llama-server --help || true               # [not win]
+    - llama-server --help || cmd /c "exit /B 0" # [win]
     - test -f $PREFIX/include/llama.h    # [unix]
-    - test -f $PREFIX/bin/main           # [unix]
-    - test -f $PREFIX/bin/server         # [unix]
+    - test -f $PREFIX/bin/llama-cli       # [unix]
+    - test -f $PREFIX/bin/llama-server   # [unix]
     - test -f $PREFIX/lib/libllama.so    # [linux]
     - test -f $PREFIX/lib/libllama.dylib # [osx]
     - if not exist %PREFIX%/Library/include/llama.h exit 1  # [win]
     - if not exist %PREFIX%/Library/lib/llama.lib exit 1    # [win]
     - if not exist %PREFIX%/Library/bin/llama.dll exit 1    # [win]
-    - if not exist %PREFIX%/Library/bin/main.exe exit 1     # [win]
-    - if not exist %PREFIX%/Library/bin/server.exe exit 1   # [win]
+    - if not exist %PREFIX%/Library/bin/llama-cli.exe exit 1      # [win]
+    - if not exist %PREFIX%/Library/bin/llama-server.exe exit 1   # [win]
 
 about:
   home: https://github.com/ggerganov/llama.cpp
