add v1 to build string

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,9 +32,9 @@ build:
   number: {{ build_number + 50 }}   # [gpu_variant == "none" and x86_64_opt == "v3"]
   number: {{ build_number }}        # [gpu_variant == "none" and x86_64_opt == "none"]
   string: cuda{{ cuda_compiler_version | replace('.', '') }}_v3_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [(gpu_variant or "").startswith('cuda') and (x86_64_opt == "v3")]
-  string: cuda{{ cuda_compiler_version | replace('.', '') }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [(gpu_variant or "").startswith('cuda') and (x86_64_opt == "none")]
+  string: cuda{{ cuda_compiler_version | replace('.', '') }}_v1_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}  # [(gpu_variant or "").startswith('cuda') and (x86_64_opt == "none")]
   string: cpu_v3_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                              # [gpu_variant == "none" and x86_64_opt == "v3"]
-  string: cpu_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                 # [gpu_variant == "none" and x86_64_opt == "none"]
+  string: cpu_v1_{{ blas_impl }}_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                              # [gpu_variant == "none" and x86_64_opt == "none"]
   string: mps_h{{ PKG_HASH }}_{{ PKG_BUILDNUM }}                                                 # [gpu_variant == "metal"]
   missing_dso_whitelist:                                                                         # [s390x or (gpu_variant or "").startswith('cuda')]
     - "**/libcuda.so*"                                                                           # [(gpu_variant or "").startswith('cuda')]
