--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,7 +47,7 @@ requirements:
     - cmake
     - ninja-base
     - pkgconfig
-    - patch     # [unix]
+    - patch     # [osx or (unix and blas_impl == "mkl")]
     - m2-patch  # [win]
   host:
     - cudatoolkit      {{ cuda_compiler_version }}        # [gpu_variant == "cuda-11"]
