--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "llama.cpp" %}
-{% set version = "0.0.3880" %}
+{% set version = "0.0.3985" %}
 {% set build_number = 0 %}
 
 package:
@@ -7,11 +7,12 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/ggerganov/llama.cpp/archive/b{{ version.split(".")[-1] }}.tar.gz
-  sha256: 3c93be382e7adab49b61c1ac225dd325eef24ef3ecfa875f03b9ddacdfebd31c
+  git_url: https://github.com/ggerganov/llama.cpp.git
+  git_rev: b{{ version.split(".")[-1] }}
+  # url: https://github.com/ggerganov/llama.cpp/archive/b{{ version.split(".")[-1] }}.tar.gz
+  # sha256: 64aaf58532c62eac4eb17007a0239546591ebc87e284e0a8235ced4987582531
   patches:
     - patches/mkl.patch                   # [blas_impl == "mkl"]
-    - patches/metal_gpu_selection.patch   # [osx]
     - patches/loosen-max_nmse_err.patch   # [osx]
     - patches/hwcap_sve_check.patch       # [aarch64]
 
