Use git protocol and set git as a dependency for windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,7 +7,7 @@ package:
   version: {{ version }}
 
 source:
-  git_url: https://github.com/ggerganov/llama.cpp.git
+  git_url: git://github.com/ggerganov/llama.cpp.git
   git_rev: b{{ version.split(".")[-1] }}
   # url: https://github.com/ggerganov/llama.cpp/archive/b{{ version.split(".")[-1] }}.tar.gz
   # sha256: 64aaf58532c62eac4eb17007a0239546591ebc87e284e0a8235ced4987582531
@@ -63,6 +63,7 @@ outputs:
         - pkgconfig
         - patch  # [osx or (unix and blas_impl == "mkl") or aarch64]
         - m2-patch  # [win]
+        - git
       host:
         - cudatoolkit      {{ cuda_compiler_version }}        # [gpu_variant == "cuda-11"]
         - cuda-version     {{ cuda_compiler_version }}        # [(gpu_variant or "").startswith('cuda')]
