Swap order, bring back folder

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,6 +9,7 @@ package:
 source:
   git_url: https://github.com/ggerganov/llama.cpp.git
   git_rev: b{{ version.split(".")[-1] }}
+  folder: llamacpp
   # url: https://github.com/ggerganov/llama.cpp/archive/b{{ version.split(".")[-1] }}.tar.gz
   # sha256: 64aaf58532c62eac4eb17007a0239546591ebc87e284e0a8235ced4987582531
   patches:
@@ -19,7 +20,6 @@ source:
 
 requirements:
   build:
-    - git
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ compiler('cuda') }} # [(gpu_variant or "").startswith('cuda') and (gpu_variant != "cuda-11")]
@@ -28,12 +28,13 @@ requirements:
     - pkgconfig
     - patch  # [osx or (unix and blas_impl == "mkl") or aarch64]
     - m2-patch  # [win]
+    - git
 
   host:
-    - git
     - python
     - poetry-core >=1.0.0
     - pip
+    - git
 
 outputs:
   - name: llama.cpp
