Fix outer package linter errors

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,12 +20,19 @@ source:
 
 requirements:
   build:
-    - git
     - patch  # [osx or (unix and blas_impl == "mkl") or aarch64]
     - m2-patch  # [win]
 
-  host:
-    - git
+about:
+  home: https://github.com/ggerganov/llama.cpp
+  license: MIT
+  license_family: MIT
+  license_file: LICENSE
+  dev_url: https://github.com/ggerganov/llama.cpp
+  doc_url: https://github.com/ggerganov/llama.cpp
+  summary: LLM inference in C/C++ and GGML conversion tools
+  description: |
+    Inference of Meta's LLaMA model (and others) in pure C/C++ and GGML conversion tools
 
 outputs:
   - name: llama.cpp
