Put git back in as a host req too

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,6 +23,9 @@ requirements:
     - git
     - patch  # [osx or (unix and blas_impl == "mkl") or aarch64]
     - m2-patch  # [win]
+  
+  host:
+    - git
 
 about:
   home: https://github.com/ggerganov/llama.cpp
